--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@ body {
 
 .app-warm {
   background-image: url('./assets/warm-bg.jpg');
-  
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.6s ease-in-out;
 }
 
 main {
